we have updated the README file

--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-hii heelo how are you 
+hii heelo how are you
+
+##devlopment environment 
+
+make sure you have javascript availabe 
+MAKE surer you know the python 
